# elgato-streamdeck

./: .gitignore  40-streamdeck.rules  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
examples/: async.rs  simple.rs
examples/async/: Cargo.toml
examples/async/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
src/: asynchronous.rs  images.rs  info.rs  lib.rs  main.rs  tests.rs  util.rs
