[package]
name = "elgato-streamdeck"
description = "HidApi driver for Elgato Stream Decks"
authors = ["TheJebForge"]
version = "0.8.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/streamduck-org"
repository = "https://github.com/streamduck-org/elgato-streamdeck"
license = "MPL-2.0"

[dependencies]
hidapi = { version = "2.6", default-features = false }
image = { version = "0.25.4", default-features = false, features = [
  "bmp",
  "jpeg",
] }
tokio = { version = "1", optional = true }
async-recursion = { version = "1.1.1", optional = true }

[features]
async = [
  "tokio",
  "tokio/sync",
  "tokio/rt-multi-thread",
  "tokio/time",
  "async-recursion",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
