[package]
name = "elgato-streamdeck"
description = "HidApi driver for Elgato Stream Decks"
authors = ["TheJebForge"]
version = "0.9.1"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/streamduck-org"
repository = "https://github.com/streamduck-org/elgato-streamdeck"
license = "MPL-2.0"

[dependencies]
hidapi = "2.6"
image = { version = "0.25.4", default-features = false, features = [
  "bmp",
  "jpeg",
] }
tokio = { version = "1", optional = true }

[features]
async = [
  "tokio",
  "tokio/sync",
  "tokio/rt-multi-thread",
  "tokio/time"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
