[package]
name = "elgato-streamdeck"
description = "HidApi driver for Elgato Stream Deck devices"
authors = ["TheJebForge", "nekename"]
version = "0.11.0"
edition = "2024"
repository = "https://github.com/OpenActionAPI/rust-elgato-streamdeck"
license = "MPL-2.0"

[dependencies]
hidapi = "2.6"
image = { version = "0.25", default-features = false, features = [
  "bmp",
  "jpeg",
] }
tokio = { version = "1", optional = true }

[features]
async = [
  "tokio",
  "tokio/sync",
  "tokio/rt-multi-thread",
  "tokio/time"
]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
